fix print in firefox - stop plots getting cut off

--- a/src/packages/@ncigdc/modern_components/ClinicalAnalysis/print.css
+++ b/src/packages/@ncigdc/modern_components/ClinicalAnalysis/print.css
@@ -8,6 +8,8 @@
     justify-content: left !important;
     background: transparent !important;
     background-color: transparent !important;
+    overflow: visible !important; /* firefox - survival plots */
+    display: block !important; /* firefox */
   }
   .no-print,
   #header,
@@ -27,19 +29,16 @@
   .test-tabs > div[style] {
     border: 0 none !important;
   }
-
   .test-tabs[style] {
     min-width: auto !important;
   }
-
   #skip[style],
   .test-tabbed-links[style],
   .test-tabs[style] {
     padding: 0 !important;
   }
-
   .clinical-analysis-card[style] {
-    display: inline-block !important;
+    display: inline-block !important; /* chrome */
     width: 100%;
     min-width: auto !important;
     height: auto !important;
@@ -47,13 +46,10 @@
     margin: 0 !important;
     page-break-after: always;
     page-break-inside: avoid;
-    position: relative !important;
   }
-
   .clinical-analysis-card div[style] {
     margin: 0 !important;
   }
-
   .print-grid[style] {
     display: block !important;
   }
@@ -64,21 +60,21 @@
   .test-survival-plot-meta span:nth-of-type(1) {
     text-align: left;
   }
-
-  .survival-legend-wrapper[style] {
-    justify-content: left !important;
+  .survival-legend-wrapper, .p-value, .print-w500 {
+    width: 500px !important;
   }
   .survival-legend-wrapper > div > div[style] {
     padding-left: 0 !important;
+    text-align: left !important;
   }
   .p-value > div {
     text-align: left !important;
   }
   .print-only {
-    display: block;
+    display: block !important;
   }
   .print-only.inline {
-    display: inline;
+    display: inline !important;
   }
   .print-mb {
     margin-bottom: 15px !important;
